--- a/CHESS-PY/Pipfile
+++ b/CHESS-PY/Pipfile
@@ -4,10 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.11"
